# franka_interface

./: .gitignore  LICENSE  README.md  readme.md
franka_interface/: .gitignore  CMakeLists.txt  package.xml
franka_interface/doc/: rosdoc.yaml
franka_interface/doc/md/: index_classes.md  index_examples.md  index_files.md  index_groups.md  index_namespaces.md  index_pages.md  indexpage.md
franka_interface/doc/md/Classes/: classfranka__interface_1_1ExecutionFailed.md  classfranka__interface_1_1FrankaInterface.md  classfranka__interface_1_1LinPlanningFailedIncomplete.md  classfranka__interface_1_1PlanningFailed.md
franka_interface/doc/md/Files/: classfranka________________________________interface________________1________________1ExecutionF7fcfc176ef28fe4326eebb6eea4ce533.md  classfranka________________________________interface________________1________________1FrankaInteb55377918315ed51c515b380cc6ee3fc.md  classfranka________________________________interface________________1________________1LinPlannin99f4b5159e3a7e451f01151a82561693.md  classfranka________________________________interface________________1________________1PlanningFailed________8md____8md__8md_8md.md  classfranka________________interface________1________1ExecutionFailed____8md__8md_8md.md  classfranka________________interface________1________1FrankaInterface____8md__8md_8md.md  classfranka________________interface________1________1LinPlanningFailedIncomplete____8md__8md_8md.md  classfranka________________interface________1________1PlanningFailed____8md__8md_8md.md  classfranka________interface____1____1ExecutionFailed__8md_8md.md  classfranka________interface____1____1FrankaInterface__8md_8md.md  classfranka________interface____1____1LinPlanningFailedIncomplete__8md_8md.md  classfranka________interface____1____1PlanningFailed__8md_8md.md  classfranka____interface__1__1ExecutionFailed_8md.md  classfranka____interface__1__1FrankaInterface_8md.md  classfranka____interface__1__1LinPlanningFailedIncomplete_8md.md  classfranka____interface__1__1PlanningFailed_8md.md  dir_27fbca9ae8f822c2b62a697ac88cc713.md  dir_5427b9f4ecb376d9e042f62ded38f695.md  dir_68267d1309a1af8e8297ef4c3efbcdba.md  dir__27fbca9ae8f822c2b62a697ac88cc713_8md.md  dir__5427b9f4ecb376d9e042f62ded38f695_8md.md  dir__68267d1309a1af8e8297ef4c3efbcdba_8md.md  dir____27fbca9ae8f822c2b62a697ac88cc713__8md_8md.md  dir____5427b9f4ecb376d9e042f62ded38f695__8md_8md.md  dir____68267d1309a1af8e8297ef4c3efbcdba__8md_8md.md  dir________27fbca9ae8f822c2b62a697ac88cc713____8md__8md_8md.md  dir________5427b9f4ecb376d9e042f62ded38f695____8md__8md_8md.md  dir________68267d1309a1af8e8297ef4c3efbcdba____8md__8md_8md.md  dir________________27fbca9ae8f822c2b62a697ac88cc713________8md____8md__8md_8md.md  dir________________68267d1309a1af8e8297ef4c3efbcdba________8md____8md__8md_8md.md  dir________________b58505b3037657b7ae39cdd3b80d46b0________8md____8md__8md_8md.md  dir________________d44c64559bbebec7f509842c48db8b23________8md____8md__8md_8md.md  dir________a40d461c1c8fb0a3b74d107ca2e49076____8md__8md_8md.md  dir________b58505b3037657b7ae39cdd3b80d46b0____8md__8md_8md.md  dir________b976535e247876b3fcfe2d2f736f9267____8md__8md_8md.md  dir________b9c65f897fbbbb9657487f4d8eee7b84____8md__8md_8md.md  dir________d44c64559bbebec7f509842c48db8b23____8md__8md_8md.md  dir________e68e8157741866f444e17edd764ebbae____8md__8md_8md.md  dir____a40d461c1c8fb0a3b74d107ca2e49076__8md_8md.md  dir____b58505b3037657b7ae39cdd3b80d46b0__8md_8md.md  (+83 more)
franka_interface/doc/md/Namespaces/: namespacefranka__interface.md
franka_interface/include/franka_interface/: exceptions.hpp  franka_interface.hpp  utils.hpp
franka_interface/launch/: frames.launch  franka.launch  sim.launch
franka_interface/src/franka_interface/: exceptions.cpp  franka_interface.cpp  utils.cpp
franka_test_pkg/: CMakeLists.txt  package.xml
franka_test_pkg/include/franka_test_pkg/: placeholder.txt
franka_test_pkg/launch/: camera_test.launch  desk_height_test.launch  gripper_example.launch  node.launch  sim.launch
franka_test_pkg/src/: camera_test.cpp  collision_example_node.cpp  franka_arm_example_node.cpp  franka_desk_height_test.cpp  franka_grab_object_example.cpp  franka_gripper_example_node.cpp  franka_lin_test.cpp  franka_test_pkg_node.cpp  node.cpp  template_node.cpp
thi_franka_moveit_config/: CMakeLists.txt  package.xml
thi_franka_moveit_config/config/: panda.srdf.xacro
(+17 files in other folders)
