<?xml version="1.0"?>
<package format="2">
  <name>franka_example_pkg</name>
  <version>0.0.0</version>
  <description>The franka_example_pkg package</description>

  <maintainer email="jon-schmidt@outlook.de">Jonas Schmidt</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/franka_test_pkg</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>franka_interface</depend>
  <depend>roscpp</depend>

  <exec_depend>thi_franka_moveit_config</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
